--- a/.dockerignore
+++ b/.dockerignore
@@ -11,6 +11,7 @@
 # Ignore all environment files (except templates).
 /.env*
 !/.env*.erb
+!/.env.example
 
 # Ignore all default key files.
 /config/master.key
