--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -1,6 +1,8 @@
 services:
 
   web:
+    user: root
+    command: ./bin/rails server -b 0.0.0.0
     volumes:
       - .:/rails
       - db_data:/rails/storage
@@ -8,6 +10,7 @@ services:
       RAILS_ENV: development
 
   updater:
+    user: root
     volumes:
       - .:/rails
       - db_data:/rails/storage
