Add consistent live indicator across all pages and UI improvements
- Add ws-dot CSS and WebSocket state handling to stats, map, and tg pages
- Swap TG and Map button order in navbar
- Add icons to map layer chooser
- Restyle stats live cards to match dashboard layout
- Highlight active tone/TG row in map popups
- Switch dev override to development mode with production DB

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -2,12 +2,13 @@ services:
 
   web:
     user: root
-    command: bash -c "bin/rails assets:precompile && bin/rails server -b 0.0.0.0"
+    command: ./bin/rails server -b 0.0.0.0
     volumes:
       - .:/rails
       - db_data:/rails/storage
     environment:
-      RAILS_ENV: production
+      RAILS_ENV: development
+      DATABASE_URL: "sqlite3:/rails/storage/production.sqlite3"
 
   updater:
     user: root
@@ -15,4 +16,5 @@ services:
       - .:/rails
       - db_data:/rails/storage
     environment:
-      RAILS_ENV: production
+      RAILS_ENV: development
+      DATABASE_URL: "sqlite3:/rails/storage/production.sqlite3"
